log

Thu 14 Mar 2024 08:10:36 PM UTC: 
 tests:  0|7
total_score: 0/70
343196f
Thu 14 Mar 2024 08:35:04 PM UTC: 
 exercises.c | 30 +++++++++++++++++++++++++++---
 1 file changed, 27 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:42:15: error: ‘NUll’ undeclared (first use in this function); did you mean ‘NULL’?
   42 |   int *newArr=NUll;
      |               ^~~~
      |               NULL
exercises.c:42:15: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:46:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   46 |       *newArr=(int*) malloc(size*sizeof(int));
      |              ^
exercises.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
69b4c14
Thu 14 Mar 2024 08:40:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:42:15: error: ‘NUll’ undeclared (first use in this function); did you mean ‘NULL’?
   42 |   int *newArr=NUll;
      |               ^~~~
      |               NULL
exercises.c:42:15: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:46:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   46 |       *newArr=(int*) malloc(size*sizeof(int));
      |              ^
exercises.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c154bd1
Thu 14 Mar 2024 08:44:13 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:42:15: error: ‘NUll’ undeclared (first use in this function); did you mean ‘NULL’?
   42 |   int *newArr=NUll;
      |               ^~~~
      |               NULL
exercises.c:42:15: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:46:30: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   46 |       *newArr=(int*) realloc(*newArr, (*newSize)*sizeof(int));
      |                              ^~~~~~~
      |                              |
      |                              int
In file included from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:29: note: expected ‘void *’ but argument is of type ‘int’
  551 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
In file included from test.c:1:
exercises.c:46:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   46 |       *newArr=(int*) realloc(*newArr, (*newSize)*sizeof(int));
      |              ^
cc1: all warnings being treated as errors
Compilation failed
657fcd4
Thu 14 Mar 2024 08:45:57 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:46:30: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   46 |       *newArr=(int*) realloc(*newArr, (*newSize)*sizeof(int));
      |                              ^~~~~~~
      |                              |
      |                              int
In file included from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:29: note: expected ‘void *’ but argument is of type ‘int’
  551 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
In file included from test.c:1:
exercises.c:46:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   46 |       *newArr=(int*) realloc(*newArr, (*newSize)*sizeof(int));
      |              ^
cc1: all warnings being treated as errors
Compilation failed
ed38766
Thu 14 Mar 2024 08:47:12 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:47:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   47 |       *newArr=(int*) realloc(newArr, (*newSize)*sizeof(int));
      |              ^
cc1: all warnings being treated as errors
Compilation failed
342fd16
Thu 14 Mar 2024 08:48:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
6126b40
Thu 14 Mar 2024 08:49:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:51:10: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   51 |   return *newArr;
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7348571
Thu 14 Mar 2024 08:51:02 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:23: error: expected statement before ‘)’ token
   48 |       if(newArr==NULL))return EXIT_FAILURE;
      |                       ^
exercises.c:48:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   48 |       if(newArr==NULL))return EXIT_FAILURE;
      |       ^~
exercises.c:48:24: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   48 |       if(newArr==NULL))return EXIT_FAILURE;
      |                        ^~~~~~
exercises.c:48:31: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   48 |       if(newArr==NULL))return EXIT_FAILURE;
      |                               ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
935410a
Thu 14 Mar 2024 08:51:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:30: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   48 |       if(newArr==NULL)return EXIT_FAILURE;
      |                              ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
71d0ece
Thu 14 Mar 2024 08:51:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
9559eaf
